mini lab additions

--- a/src/main/resources/templates/fragments/_header.html
+++ b/src/main/resources/templates/fragments/_header.html
@@ -9,6 +9,7 @@
             <li><a th:href="@{/fossils/facts}">Wisco Fossils</a></li>
             <li><a th:href="@{/glaciers/facts}">Glacier Facts</a></li>
             <li><a th:href="@{/glaciers/trail}">Ice Age Trail</a></li>
+            <li><a th:href="@{/dinosaurs/newdiscovery}">New Dinosaur</a></li>
             <li><a th:href="@{/redirect-me}">Redirect</a></li>
             <li><a th:href="@{/forward-me}">Forward</a></li>
         </ul>
